Fix Fuchsia compile bug with TtsPlatform.

Bug: 910653
Change-Id: Id6009d4789c560e54c450377c16f1013e57a914c
Reviewed-on: https://chromium-review.googlesource.com/c/1356886
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612744}
Former-commit-id: 15ea3c471bba13b530aaabcb9c4ffaf3164e3435