content/browser/speech/tts_platform_impl.cc
@@ -14,7 +14,11 @@ namespace content {
 // static
 TtsPlatform* TtsPlatform::GetInstance() {
 #if defined(OS_CHROMEOS) || defined(OS_ANDROID)
+  // Chrome and Android TTS platforms have chrome/ dependencies.
   return GetContentClient()->browser()->GetTtsPlatform();
+#elif defined(OS_FUCHSIA)
+  // There is no platform TTS definition for Fuchsia.
+  return nullptr;
 #else
   return TtsPlatformImpl::GetInstance();
 #endif
